2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/Segment.cs,
	  Mono.TextEditor/LineSegment.cs: Fixed some warnings.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed possible nullref.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/IMargin.cs, Mono.TextEditor/SelectionMarker.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/GutterMargin.cs: Worked
	  on selection.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed Bug 322763 - Ctrl + Backspace
	  deletes the end of the line.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: goto/delete next/prev word should
	  now be the same as in gtksourceview.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditor.cs: Implemented
	  undo operation dispose

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs: Fixed undo/redo bug.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs: Worked
	  on undo/redo.

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed Bug 362691 - Mouse click doesn't
	  clear selection in some specific case

2008-02-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/IMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/BookmarkMargin.cs, Mono.TextEditor/GutterMargin.cs: